# connPFM

./: .codecov.yml  .gitattributes  .gitignore  .zenodo.json  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  singularity_recipe
.circleci/: artifact_path  config.yml
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
connPFM/: _version.py  connPFM.py  info.py
connPFM/cli/: caps.py  cli_plotting.py  connPFM.py  debiasing.py
connPFM/connectivity/: caps.py  connectivity_utils.py  ev.py  plotting.py  utils.py
connPFM/debiasing/: debiasing.py  debiasing_functions.py
connPFM/deconvolution/: compute_slars.py  compute_slars.sh  roiPFM.py  roi_pfm.py  run_stability_lars_bcbl.py  stability_lars.py  stability_lars_caller.py  surr_debiasing.py
connPFM/tests/: conftest.py  test_debiasing.py  test_deconvolution.py  test_ev.py  test_integration.py  test_utils.py
connPFM/utils/: atlas_mod.py  hrf_generator.py  hrf_matrix.py  io.py  loggers.py  surrogate_generator.py
docker_slim/: Dockerfile
docs/: Makefile  api.rst  conf.py  index.rst
ismrm2022/: stability_pfm.py
ismrm2022/nilearn_cache/joblib/nilearn/input_data/base_masker/filter_and_extract/3195ebe31a70c9bd4ad06d7ce66a6045/: metadata.json  output.pkl
ohbm2022/: plots_ohbm.py  stability_pfm.py
