[versioneer]
VCS = git
style = pep440
versionfile_source = connPFM/_version.py
versionfile_build = connPFM/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=
    *build/,docs,versioneer.py,connPFM/_version.py,
    connPFM/due.py
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
norecursedirs = ismrm2022/*

[options.package_data]
* =
    resources/*
    tests/data/*

[options.entry_points]
console_scripts =
    connPFM=connPFM.connPFM:_main

[coverage:run]
omit =
    *connPFM/connectivity/stability_lars_caller.py